--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="dummy shopping cart" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+  
     <meta
       name="description"
       content="Web site created using create-react-app"
